--- a/src/app/screens/todo-list/todo-list.component.scss
+++ b/src/app/screens/todo-list/todo-list.component.scss
@@ -18,3 +18,11 @@
   width: 100%;
   margin-top: 24px;
 }
+
+.empty-box {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
